--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
- <!-- chọn ngôn ngữ, ăn theo máy tính, có thể xóa-->
- <head>
+<!-- chọn ngôn ngữ, ăn theo máy tính, có thể xóa-->
+
+<head>
   <!-- nhúng các file css, js -->
   <!-- nhúng file css dùng thẻ link, nhúng file js dùng thẻ script -->
   <meta charset="UTF-8" />
-  <meta
-   name="viewport"
-   content="width=device-width, initial-scale=1.0"
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <!--tag title luôn phải nằm trong thẻ head -->
   <link rel="stylesheet" href="custom.css" />
- </head>
+</head>
 
- <body class="body">
+<body class="body">
+  <h1 id="firstId">Heading 1</h1>
+  <h1 id="firstId">Heading 1</h1>
   <h1 id="firstId">Heading 1</h1>
   <h1 id="secondId">Heading 2</h1>
   <button id="btn">subtract numbers</button>
   <ul id="list"></ul>
   <script src="./app.js"></script>
- </body>
+</body>
+
 </html>
