--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <h1 id="firstId">Heading 1</h1>
   <h1 id="firstId">Heading 1</h1>
   <h1 id="secondId">Heading 2</h1>
+  <h1 id="secondId">Heading 2</h1>
+  <h1 id="secondId">Heading 2</h1>
   <button id="btn">subtract numbers</button>
   <ul id="list"></ul>
   <script src="./app.js"></script>
